@@ -3,6 +3,7 @@
 *************************
 Version 0.6.0-alpha [2005-xxx-xx] - Jesper Veggerby <pear.nosey@veggerby.dk>
     * Added Request #5031 "Horizontal Bar graphs required" - all plot types (except radar and pie) support horizontal, it is the "Plotarea" that is horizontal
+    * Fixed Bug #5035 "Legend and graph color mismatch when using zeros in stacked bar"
 
 Version 0.5.0-alpha [2005-Aug-08] - Jesper Veggerby <pear.nosey@veggerby.dk>
     * Major change: removed Image_Graph_Driver and subclasses and uses Image_Canvas instead, which implies:
